c4prj3_finish/grade.txt
Grading at Mon Jul 22 09:11:03 UTC 2019
Running 'make clean' to do a clean build of your project
rm -rf *.o poker *~
Running 'make poker OTHERFLAGS=-O3' to build your project
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o cards.o cards.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o deck.o deck.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o eval.o eval.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o future.o future.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o input.o input.c
gcc -Wall -Werror -ggdb3 -std=gnu99 -pedantic -O3   -c -o main.o main.c
main.c: In function ‘get_best_hand_idx’:
main.c:13:16: error: ‘i’ undeclared (first use in this function)
   for(int u=0; i<n_hands+1; i++) tmp[i] = 0;
                ^
main.c:13:16: note: each undeclared identifier is reported only once for each function it appears in
main.c:13:11: error: unused variable ‘u’ [-Werror=unused-variable]
   for(int u=0; i<n_hands+1; i++) tmp[i] = 0;
           ^
cc1: all warnings being treated as errors
<builtin>: recipe for target 'main.o' failed
make: *** [main.o] Error 1
make failed

Overall Grade: F
